[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "up-to-ynab"
version = "2.0.0"
description = "Sync transactions from Up Bank to YNAB"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi==0.119.0",
    "uvicorn[standard]==0.38.0",
    "pydantic==2.12.3",
    "pydantic-settings==2.1.0",
    "sqlalchemy==2.0.44",
    "alembic==1.13.0",
    "aiosqlite==0.19.0",
    "httpx==0.28.1",
    "python-multipart==0.0.6",
    "python-dotenv==1.0.0",
    "structlog==25.5.0",
]

[project.optional-dependencies]
test = [
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "pytest-mock==3.12.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 88